testsuite/tests/rep-poly/RepPolyMcBody.stderr

RepPolyMcBody.hs:30:16: error:
    • The first argument to (>>),
      arising from the monad comprehension,
      does not have a fixed runtime representation:
        ma0 :: TYPE rep
    • In a stmt of a monad comprehension: True
      In the expression: [() | True]
      In an equation for ‘foo’: foo _ = [() | True]
